[fix] menu overlay clickable when not visible

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -18,10 +18,14 @@ $content-padding: max(calc((100vw - var(--sizes-desktop)) / 2), 7.5vw);
 .wrapper {
     width: 50vw;
     height: 100vh;
+
+    pointer-events: none;
 }
 
 .content {
     height: 100%;
+
+    pointer-events: all;
 
     overflow-x: hidden;
     position: relative;
